# figma-mcp

./: .env.supabase.txt  .gitignore  CLAUDE.md  MCP_OPTIMIZATION_PLAN.md  MCP_PROJECT_SUMMARY.md  MCP_SERVER_FIX_PLAN.md  MCP_SERVER_STATUS_REPORT.md  README.md  SETUP_GUIDE.md  SUPABASE_MCP_SETUP_GUIDE.md  fix_server_builds.sh  generate_mcp_config.py  mcp_config_status.md  mcp_server_manager.py  mcp_servers_catalog.md  package-lock.json  package.json  shadcn-ui-mcp-handler.js.backup  supabase_mcp_setup.md  test_all_mcp_servers.py  tsconfig.json  turbo.json
ai-reasoning-mcp/: .env.example  .eslintrc.json  CLAUDE.md  README.md  jest.config.cjs  (+4 more)
mas-mcp/documentation-manager-server/python_conversion/: README.md  config.example.json  pyproject.toml
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/: __init__.py  __main__.py
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/agents/: base_agent.py  documentation_manager_agent.py
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/database/: database_service.py
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/handlers/: document_handlers.py
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/models/: agent.py  document.py
mas-mcp/documentation-manager-server/python_conversion/src/documentation_manager/services/: document_service.py  generator_service.py  llm_service.py  template_service.py
mas-mcp/documentation-manager-server/python_conversion/tests/: test_server.py
(+594 files in other folders)
