[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "documentation-manager-server"
version = "1.0.0"
description = "MCP server for documentation management and generation with agent architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Documentation Manager Team"}
]
dependencies = [
    "modelcontextprotocol>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "anthropic>=0.16.0",
    "supabase>=2.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 